--- a/header.ejs
+++ b/header.ejs
@@ -7,7 +7,7 @@
         <li><a href="/">Accueil</a></li>
         <li><a href="/about">À propos</a></li>
         <li><a href="/error404">Erreur 404</a></li>
-        <li><a href="/contact">Contact</a></li>
+        <li><a href="/chat">Chat</a></li>
       </ul>
     </nav>
 </header>
