--- a/login.ejs
+++ b/login.ejs
@@ -4,6 +4,8 @@
     <title>Page de connexion</title>
   </head>
   <body>
+    <%- include('parts/header.ejs') %>
+
     <h1>Page de connexion</h1>
     <form id="loginForm" action="/login" method="post">
       <label for="username">Nom d'utilisateur:</label>
@@ -12,5 +14,8 @@
       <input type="password" id="password" name="password"><br>
       <input type="submit" value="Se connecter">
     </form>
+
+    <%- include('parts/footer.ejs') %>
+    
   </body>
 </html>
