--- a/parts/header.ejs
+++ b/parts/header.ejs
@@ -2,8 +2,10 @@
   <nav>
     <ul>
       <li><a href="/">Home</a></li>
-      <li><a href="/about">About</a></li>
-      <li><a href="/contact">Contact</a></li>
+      <li><a href="/tchat">Tchat</a></li>
+      <li><a href="/login">Login</a></li>
+      <li><a href="/download">Download</a></li>
+      <li><a href="/error404">Error 404</a></li>
     </ul>
   </nav>
 </header>
