--- a/tchat.ejs
+++ b/tchat.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <style>
+    <!--<style>
       body { margin: 0; padding-bottom: 3rem; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; }
 
       #form { background: rgba(0, 0, 0, 0.15); padding: 0.25rem; position: fixed; bottom: 0; left: 0; right: 0; display: flex; height: 3rem; box-sizing: border-box; backdrop-filter: blur(10px); }
@@ -12,24 +12,40 @@
       #messages { list-style-type: none; margin: 0; padding: 0; }
       #messages > li { padding: 0.5rem 1rem; }
       #messages > li:nth-child(odd) { background: #efefef; }
-    </style>
+    </style>-->
   </head>
   <body>
-    <ul id="messages"></ul>
+    <%- include('parts/header.ejs') %>
+
+    <h1>Tchat en ligne</h1>
+    
+      <form id="form-pseudo">
+          <label for="pseudo">Choisissez un pseudo : </label>
+          <input type="text" id="pseudo" name="pseudo">
+          <button type="submit">OK</button>
+        </form>
+        <div id="messages"></div>
+        <div id="pseudo-choisi"></div>
+        
+
+
     <form id="form" action="">
       <input id="input" autocomplete="off" /><button>Send</button>
     </form>
 
+
+
     <script src="/socket.io/socket.io.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
 <script>
-  const socket = io();
-
+    const socket = io();
     const user = 'Users';
-
     const messages = document.getElementById('messages');
     const form = document.getElementById('form');
     const input = document.getElementById('input');
 
+//Gestion du chat
   form.addEventListener('submit', function(e) {
     e.preventDefault();
     if (input.value) {
@@ -40,10 +56,33 @@
 
   socket.on('chat message', function(msg) {
     var item = document.createElement('li');
-    item.textContent = user + ' : ' + msg;
+    item.textContent = pseudo + ' : ' + msg;
     messages.appendChild(item);
     window.scrollTo(0, document.body.scrollHeight);
   });
+
+
+// Gestion du cookie
+  $('#form-pseudo').submit((e) => {
+  e.preventDefault();
+  const pseudo = $('#pseudo').val();
+  socket.emit('nouveau-pseudo', pseudo);
+  // Stockage du pseudo dans un cookie nommé "pseudo"
+  document.cookie = `pseudo=${pseudo}; SameSite=Strict; path=/`;
+});
+
+// Fonction pour extraire la valeur d'un cookie
+function getCookie(name) {
+  const value = `; ${document.cookie}`;
+  const parts = value.split(`; ${name}=`);
+  if (parts.length === 2) return parts.pop().split(';').shift();
+}
+
+// Affichage du pseudo stocké dans le cookie "pseudo"
+const pseudo = getCookie('pseudo') || 'Anonyme';
+$('#pseudo-choisi').text(`Pseudo choisi : ${pseudo}`);
+
 </script>
+
   </body>
 </html>
