--- a/home.ejs
+++ b/home.ejs
@@ -2,12 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="public/style.css">
+
+    <style>
+
+    </style>
+
 </head>
 <body>
 
     <%- include('parts/header.ejs') %>
 
-    <h1>Bienvenue sur ma page d'accueil</h1>
+    <h1 class="rouge">Bienvenue sur ma page d'accueil</h1>
 
     <%- include('parts/footer.ejs') %>
 
