--- a/tchat.ejs
+++ b/tchat.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <!--<style>
+    <style>
       body { margin: 0; padding-bottom: 3rem; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; }
 
       #form { background: rgba(0, 0, 0, 0.15); padding: 0.25rem; position: fixed; bottom: 0; left: 0; right: 0; display: flex; height: 3rem; box-sizing: border-box; backdrop-filter: blur(10px); }
@@ -12,7 +12,7 @@
       #messages { list-style-type: none; margin: 0; padding: 0; }
       #messages > li { padding: 0.5rem 1rem; }
       #messages > li:nth-child(odd) { background: #efefef; }
-    </style>-->
+    </style>
   </head>
   <body>
     <%- include('parts/header.ejs') %>
@@ -34,8 +34,8 @@
 
     <ul id="messages">
       <% for(var i=0; i<chatHistory.length; i++) { %>
-        <li><strong></strong>: <%= chatHistory[i].message %><small><%= chatHistory[i].time %></small></li>
-      <% } %>
+        <li><strong><%= chatHistory[i].pseudo %></strong>: <%= chatHistory[i].content %><small><%= chatHistory[i].time %></small></li>
+        <% } %>
     </ul>
         
 
@@ -92,7 +92,7 @@ $('#pseudo-choisi').html(`Pseudo choisi : ${pseudo}`);
 
 // History
 socket.emit('pseudo', pseudo);
-
+/*
   // Réception de l'historique des messages
   socket.on('chat history', function(history) {
     var messages = document.getElementById('messages');
@@ -103,7 +103,7 @@ socket.emit('pseudo', pseudo);
       messages.appendChild(item);
       window.scrollTo(0, document.body.scrollHeight);
     }
-  });
+  });*/
 
   // Envoi d'un message au serveur
   function sendMessage() {
@@ -113,8 +113,8 @@ socket.emit('pseudo', pseudo);
     input.value = '';
     return false;
   }
-
 // Fin History
+
 
 
 </script>
