--- a/home.ejs
+++ b/home.ejs
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="public/style.css">
 
     <style>
+      body { margin: 0; padding-bottom: 3rem; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; }
 
     </style>
 
@@ -13,7 +14,7 @@
 
     <%- include('parts/header.ejs') %>
 
-    <h1 class="rouge">Bienvenue sur ma page d'accueil</h1>
+    <h1 style="text-align: center;">Bienvenue sur ma page Home</h1>
 
     <%- include('parts/footer.ejs') %>
 
