--- a/parts/footer.ejs
+++ b/parts/footer.ejs
@@ -1,5 +1,3 @@
-<footer>
-  <p>Insert your footer content here</p>
+<footer style="position: absolute; bottom: 0; left: 0; right: 0; text-align: center;">
+  <p>2023. Tous droits réservés</p>
 </footer>
-
-<!-- You can add any additional HTML or EJS code within the <footer> tags to customize your footer -->
