css login / error404

--- a/error.ejs
+++ b/error.ejs
@@ -2,11 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+
+    <style>
+        body { margin: 0; padding-bottom: 3rem; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; }
+      </style>
 </head>
 <body>
     <%- include('parts/header.ejs') %>
 
-    <h1>Page d'erreur</h1>
+    <h1 style="text-align: center;"> Page 404</h1>
 
     <%- include('parts/footer.ejs') %>
 </body>
