--- a/error.ejs
+++ b/error.ejs
@@ -10,7 +10,7 @@
 <body>
     <%- include('parts/header.ejs') %>
 
-    <h1 style="text-align: center;"> Page 404</h1>
+    <h1 style="text-align: center;"> Page 404, revenez à la page précédente</h1>
 
     <%- include('parts/footer.ejs') %>
 </body>
