--- a/parts/header.ejs
+++ b/parts/header.ejs
@@ -7,6 +7,7 @@
       <li class="li-header"><a href="/download">Download</a></li>
       <li class="li-header"><a href="/error404">Error 404</a></li>
       <li class="li-header"><a href="/login">Login</a></li>
+      <li class="li-header"><a href="/admin">Compte</a></li>
     </ul>
   </nav>
 
