--- a/login.ejs
+++ b/login.ejs
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <title>Login</title>
     <style>
       body { margin: 0; padding-bottom: 3rem; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; }
     
@@ -9,6 +10,7 @@
         text-align: center;
         margin-bottom: 0 auto;
         text-align: center;
+        margin-top: 5rem;
       }
 
       form {
@@ -44,6 +46,12 @@
         background-color: #555;
       }
     
+      .p {
+        text-align: center;
+        font-size: 1.2rem;
+        margin-top: 3rem;
+      }
+
     </style>
 
   </head>
@@ -58,7 +66,9 @@
       <input class="form_user" type="password" id="password" name="password"><br>
       <input class="form_submit" type="submit" value="Se connecter">
     </form>
-
+   
+    <p class="p">Une fois connecter, vous pouvez accéder à la page "Compte"</p>
+    
     <%- include('parts/footer.ejs') %>
     
   </body>
