--- a/parts/header.ejs
+++ b/parts/header.ejs
@@ -20,6 +20,13 @@
   justify-content: center;
   background-color: gray;
   padding: 1rem;
+  
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+
+
 }
 
 ul {
