--- a/admin.ejs
+++ b/admin.ejs
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <title>Page d'administration</title>
     <style>
-      body { margin: 0; padding-bottom: 3rem; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; }
-      
+      body { 
+        margin: 0;
+        padding-bottom: 3rem; 
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; 
+      }
+
       h1 {
         color: #333;
         font-size: 2rem;
@@ -44,7 +48,7 @@
   <body>
     <%- include('parts/header.ejs') %>
 
-    <h1>Page d'administration</h1>
+    <h1 style="margin-top: 5rem;">Page d'administration</h1>
     <div id="welcomeMessage"><%= message %></div>
   
     <form action="/logout" method="post">
