--- a/error.ejs
+++ b/error.ejs
@@ -2,15 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-
+    <title>Error 404</title>
     <style>
-        body { margin: 0; padding-bottom: 3rem; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; }
+        body { 
+            margin: 0;
+            padding-bottom: 3rem; 
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; 
+        }
+      
       </style>
 </head>
 <body>
     <%- include('parts/header.ejs') %>
 
-    <h1 style="text-align: center;"> Page 404, revenez à la page précédente</h1>
+    <h1 style="text-align: center; margin-top: 5rem;"> Page Introuvable</h1>
 
     <%- include('parts/footer.ejs') %>
 </body>
