--- a/login.ejs
+++ b/login.ejs
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <title>Login</title>
     <style>
-      body { margin: 0; padding-bottom: 3rem; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; }
-    
+      body { 
+        margin: 0;
+        padding-bottom: 3rem; 
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; 
+      }    
+      
       h1 {
         text-align: center;
         margin-bottom: 0 auto;
@@ -53,12 +57,12 @@
       }
 
     </style>
-
   </head>
   <body>
     <%- include('parts/header.ejs') %>
 
     <h1>Page de connexion</h1>
+    
     <form id="loginForm" action="/login" method="post">
       <label for="username">Nom d'utilisateur:</label>
       <input class="form_user" type="text" id="username" name="username"><br>
