--- a/tchat.ejs
+++ b/tchat.ejs
@@ -3,7 +3,11 @@
   <head>
     <title>Tchat</title>
     <style>
-      body { margin: 0; padding-bottom: 3rem; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; }
+      body { 
+        margin: 0;
+        padding-bottom: 3rem; 
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; 
+      }
 
       h1 {
         text-align: center;
@@ -46,6 +50,10 @@
         font-weight: bold;
       }
 
+      .title_h1 {
+        margin-top: 5rem;
+      }
+
       #form { background: rgba(0, 0, 0, 0.15); padding: 0.25rem; position: fixed; bottom: 0; left: 0; right: 0; display: flex; height: 3rem; box-sizing: border-box; backdrop-filter: blur(10px); }
       #input { border: none; padding: 0 1rem; flex-grow: 1; border-radius: 2rem; margin: 0.25rem; }
       #input:focus { outline: none; }
@@ -61,8 +69,8 @@
 
     <%- include('parts/header.ejs') %>
 
-    <h1>Tchat en ligne</h1>
-    
+    <h1 class="title_h1">Tchat en ligne</h1>
+        
       <form id="form-pseudo">
           <label for="pseudo">Choisissez un pseudo : </label>
           <input type="text" id="pseudo" name="pseudo">
@@ -83,10 +91,8 @@
       <input id="input" autocomplete="off" /><button>Send</button>
     </form>
        
-
     <script src="/socket.io/socket.io.js"></script>
-  
-    
+      
 <script>
     const socket = io();
     const messages = document.getElementById('messages');
@@ -106,39 +112,37 @@
 
   socket.on('chat message', function(msg, time) {
     var item = document.createElement('li');
-    item.innerHTML = '<strong>' + pseudo + '</strong>' + ' : ' + msg + '    ' + time ;
+    item.innerHTML = '<strong>' + pseudo + '</strong>' + ' : ' + msg + '          ' + time ;
     messages.appendChild(item);
     window.scrollTo(0, document.body.scrollHeight);
   });
 
-// Gestion du cookie
-formPseudo.addEventListener('submit', (e) => {
-        e.preventDefault();
-        const pseudo = document.getElementById('pseudo').value;
-        socket.emit('nouveau-pseudo', pseudo);
-        document.cookie = `pseudo=${pseudo}; SameSite=Strict; path=/`;
-        location.reload();
-});
+  // Gestion du cookie
+  formPseudo.addEventListener('submit', (e) => {
+    e.preventDefault();
+    const pseudo = document.getElementById('pseudo').value;
+    socket.emit('nouveau-pseudo', pseudo);
+    document.cookie = `pseudo=${pseudo}; SameSite=Strict; path=/`;
+    location.reload();
+  });
 
-// Fonction pour extraire la valeur d'un cookie
-function getCookie(name) {
-  const value = `; ${document.cookie}`;
-  const parts = value.split(`; ${name}=`);
-  if (parts.length === 2) return parts.pop().split(';').shift();
-}
+  // Fonction pour extraire la valeur d'un cookie
+  function getCookie(name) {
+    const value = `; ${document.cookie}`;
+    const parts = value.split(`; ${name}=`);
+    if (parts.length === 2) return parts.pop().split(';').shift();
+  }
 
-// Affichage du pseudo stocké dans le cookie "pseudo"
-const pseudo2 = document.getElementById('pseudo-choisi');
-const pseudo = getCookie('pseudo') || 'Anonyme';
+  // Affichage du pseudo stocké dans le cookie "pseudo"
+  const pseudo2 = document.getElementById('pseudo-choisi');
+  const pseudo = getCookie('pseudo') || 'Anonyme';
 
-if (pseudo) {
-  pseudoChoisi.textContent = `Pseudo : ${pseudo}`;
-}
+  if (pseudo) {
+    pseudoChoisi.textContent = `Pseudo : ${pseudo}`;
+  }
 
-
-
-// History
-socket.emit('pseudo', pseudo);
+  // History
+  socket.emit('pseudo', pseudo);
 
   // Envoi d'un message au serveur
   function sendMessage() {
@@ -149,6 +153,21 @@ socket.emit('pseudo', pseudo);
     return false;
   }
 // Fin History
+
+  function displayChatHistory(chatHistory) {
+    var messagesContainer = document.getElementById('messages');
+    messagesContainer.innerHTML = '';
+
+    for (var i = 0; i < chatHistory.length; i++) {
+      var message = chatHistory[i];
+      var listItem = document.createElement('li');
+      listItem.innerHTML = '<strong>' + pseudo + '</strong>: ' + message.content + '         ' + '<small>' + message.time + '</small>';
+      messagesContainer.appendChild(listItem);
+    }
+  }
+
+  displayChatHistory(<%- JSON.stringify(chatHistory) %>);
+
 
 </script>
 
